# EnvGuard

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  issue.md
.github/workflows/: release.yml
crates/env_guard_app/: Cargo.toml  build.rs  tauri.conf.json
crates/env_guard_app/capabilities/: default.json
crates/env_guard_app/frontend/: app.js  index.css  index.html
crates/env_guard_app/icons/: icon.icns
crates/env_guard_app/src/: commands.rs  config.rs  main.rs  state.rs
crates/env_guard_app/ui/: app.slint  components.slint  theme.slint  views.slint
crates/env_guard_core/: Cargo.toml
crates/env_guard_core/src/: lib.rs
crates/env_guard_core/src/credential_controller/: crypto.rs  storage.rs
crates/env_guard_core/src/env_guard/: crypto.rs  errors.rs  mod.rs  models.rs  session.rs  storage.rs
