[package]
name = "env_guard_app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
slint = { version = "1.5", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-femtovg"] }
env_guard_core = { path = "../env_guard_core" }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"

[build-dependencies]
slint-build = "1.5"
