[package]
name = "env_guard_app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
env_guard_core = { path = "../env_guard_core" }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
tauri = { version = "2", features = ["default"] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[package.metadata.packager]
product-name = "EnvGuard"
identifier = "com.envguard.app"
publisher = "0xarchit"
out-dir = "../../dist"
icons = ["icons/logo.png"]
binaries = [
  { path = "env_guard_app", main = true }
]
