[package]
name = "env_guard_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "2"
portable-pty = "0.8"
which = "6"
dirs = "5"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security_Cryptography"] }
